feat: pasta de assets

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Projeto Lobo</title>
 </head>
 <body>
+    <header>
+        <div class="cabecalho">
+
+        </div>
+    </header>
     
 </body>
 <script src="script.js"></script>
