--- a/quem_somos.html
+++ b/quem_somos.html
@@ -7,7 +7,11 @@
     <title>Projeto Lobo</title>
 </head>
 <body>
-    
+    <footer>
+        <div class="footer">
+            <div style="width: 30%" class="iframe"><iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe></div>
+        </div>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
