feat: header teste

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <header>
         <div class="cabecalho">
-
+            <div>
+                <a class="cabecalho_texto" href="/projeto-lobo/lista_lobinho.html">Nosso Lobinhos</a>
+            </div>
+            <img class="cabecalho_icone" src="/projeto-lobo/assets/Group 3.svg" alt="">
+            <div>
+                <a class="cabecalho_texto" href="/projeto-lobo/lista_lobinho.html">Quem Somos</a>
+            </div>
         </div>
     </header>
     
