--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <div class="cabecalho">
             <div>
-                <a class="cabecalho_texto" href="/projeto-lobo/lista_lobinho.html">Nosso Lobinhos</a>
+                <a class="cabecalho_texto" href="lista_lobinho.html">Nosso Lobinhos</a>
             </div>
-            <img class="cabecalho_icone" src="/projeto-lobo/assets/Group 3.svg" alt="">
+            <img class="cabecalho_icone" src="assets/Group 3.svg" alt="">
             <div>
-                <a class="cabecalho_texto" href="/projeto-lobo/lista_lobinho.html">Quem Somos</a>
+                <a class="cabecalho_texto" href="lista_lobinho.html">Quem Somos</a>
             </div>
         </div>
     </header>
