feat: barra embaixo dos texto Header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <img class="cabecalho_icone" src="assets/Group 3.svg" alt="">
             <div>
-                <a class="cabecalho_texto" href="lista_lobinho.html">Quem Somos</a>
+                <a class="cabecalho_texto" id="teste" href="lista_lobinho.html">Quem Somos</a>
             </div>
         </div>
     </header>
