--- a/quem_somos.html
+++ b/quem_somos.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <footer>
+        <div class="gradient_line"></div>
         <div class="footer">
-            <div style="width: 30%" class="sub_footer">
+            <div class="left_sub_footer">
                 <iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
                 <div class="contato">
                     <div class="footer_descricao">
@@ -24,8 +25,13 @@
                         <img src="assets/msg.png" class="icons">
                         <p class="footer_text">salve-lobos@lobINhos.com</p>
                     </div>
+                    <button class="footer_button">Quem Somos</button>
                 </div>
-                <!-- <button class="footer_button">Quem somos</button> -->
+            </div>
+            <div class="right_sub_footer">
+                <p class="footer_text">Desenvolvido com</p>
+                <img src="assets/paw.png" class="footer-image">
+                
             </div>
         </div>
     </footer>
