Adiciona javascript para o html lista_lobinho

--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -7,7 +7,18 @@
     <title>Projeto Lobo</title>
 </head>
 <body>
-    
+    <h1>Dados dos Lobos</h1>
+  
+  <div id="nao-adotados-container">
+    <h2>Lobos Não Adotados</h2>
+  </div>
+  
+  <div id="adotados-container">
+    <h2>Lobos Adotados</h2>
+  </div>
+
+  <button class="add-nao-adotados">Adicionar Lobo Não Adotado</button>
+  <button class="add-adotados">Adicionar Lobo Adotado</button>
 </body>
 <script src="script.js"></script>
 </html>
