refactor: correção texto header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="cabecalho">
             <div>
-                <a class="cabecalho_texto" href="lista_lobinho.html">Nosso Lobinhos</a>
+                <a class="cabecalho_texto" href="lista_lobinho.html">Nossos Lobinhos</a>
             </div>
             <img class="cabecalho_icone" src="assets/Group 3.svg" alt="">
             <div>
