--- a/adicionar_lobinho.html
+++ b/adicionar_lobinho.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
     
 </body>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 </html>
