--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
             <div>
                 <a class="cabecalho_texto" href="lista_lobinho.html">Nossos Lobinhos</a>
             </div>
-            <img class="cabecalho_icone" src="assets/Group 3.svg" alt="">
+            <img class="cabecalho_icone" src="assets/images/Group 3.svg" alt="">
             <div>
                 <a class="cabecalho_texto" id="teste" href="lista_lobinho.html">Quem Somos</a>
             </div>
@@ -20,5 +20,5 @@
     </header>
     
 </body>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 </html>
