--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
@@ -20,5 +20,5 @@
   <button class="add-nao-adotados">Adicionar Lobo Não Adotado</button>
   <button class="add-adotados">Adicionar Lobo Adotado</button>
 </body>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 </html>
