feat (quem_somos): add texto e descrição principal + exclusão do arquivo reset.css

--- a/quem_somos.html
+++ b/quem_somos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/quem-somos.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
@@ -18,7 +19,11 @@
             </div>
         </div>
     </header>
-    <footer>
+    <section class="middle_section">
+        <div class="title_quem_somos">Quem somos</div>
+        <div class="text_quem_somos"><span class="main_text">Gingerbread cookie gingerbread jujubes cake biscuit tart fruitcake. Jujubes chupa chups wafer cheesecake lemon drops. Pastry caramels cookie marshmallow. Chupa chups jelly beans apple pie powder marzipan oat cake jelly-o chupa chups biscuit. Lollipop biscuit jujubes tootsie roll oat cake chocolate bar.</span></div>
+    </section>
+    <footer class="main_footer">
         <div class="gradient_line"></div>
         <div class="footer">
             <div class="left_sub_footer">
