refactor: erros gramaticais e de sintaxe

--- a/quem_somos.html
+++ b/quem_somos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/quem-somos.css">
+    <link rel="stylesheet" href="assets/css/quem_somos.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
@@ -52,5 +52,5 @@
         </div>
     </footer>
 </body>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 </html>
