feat: add Homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
@@ -18,6 +19,57 @@
             </div>
         </div>
     </header>
+    <main>
+        <section id="secao_primeira">
+            <div>
+                <h1 class="titulo_1">
+                    Adote um Lobinho
+                </h1>
+                <div class="texto_secao_primeira">
+                    <span class="paragrafo_1">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id esse quia obcaecati, ipsum maiores error exercitationem cupiditate mollitia voluptas nemo officiis voluptatibus fuga aperiam nesciunt, iste inventore saepe! Eum, et?
+                    </span>
+                </div>
+            </div>
+        </section>
+        <section id="secao_segunda">
+
+        </section>
+        <section id="secao_terceira">
+
+        </section>
+        <section id="secao_quarta">
+
+        </section>
+    </main>
+    <footer>
+        <div class="gradient_line"></div>
+        <div class="footer">
+            <div class="left_sub_footer">
+                <iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
+                <div class="contato">
+                    <div class="footer_descricao">
+                        <img src="assets/images/pin.png" class="icons">
+                        <p class="footer_text">Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
+                    </div>
+                    <div class="footer_descricao">
+                            <img src="assets/images/phone.png" class="icons">
+                            <p class="footer_text">(99) 99999-9999</p>
+                    </div>
+                    <div class="footer_descricao">
+                        <img src="assets/images/msg.png" class="icons">
+                        <p class="footer_text">salve-lobos@lobINhos.com</p>
+                    </div>
+                    <button class="footer_button">Quem Somos</button>
+                </div>
+            </div>
+            <div class="right_sub_footer">
+                <p class="footer_text">Desenvolvido com</p>
+                <img src="assets/images/paw.png" class="footer-image">
+                
+            </div>
+        </div>
+    </footer>
     
 </body>
 <script src="assets/js/script.js"></script>
