feat (adotar_lobinho): add imagem e título na página

--- a/adotar_lobinho.html
+++ b/adotar_lobinho.html
@@ -20,7 +20,14 @@
         </div>
     </header>
     <section class="section_adotar_lobinho">
-
+        <div class="topo_adotar_lobo">
+            <img src="assets/images/lobo.png" class="img_adotar_lobo">
+            <div class="container_titulo">
+                <span class="text_adotar_lobo">Adote o(a) NomeDoLobo</span>
+                <span class="id_lobo">ID:314159</span>
+            </div>
+            
+        </div>
     </section>
     <footer class="main_footer">
         <div class="gradient_line"></div>
@@ -46,7 +53,6 @@
             <div class="right_sub_footer">
                 <p class="footer_text">Desenvolvido com</p>
                 <img src="assets/images/paw.png" class="footer-image">
-                
             </div>
         </div>
     </footer>
