--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -7,7 +7,18 @@
     <title>Projeto Lobo</title>
 </head>
 <body>
-    <h1>Dados dos Lobos</h1>
+  <header>
+    <div class="cabecalho">
+        <div>
+            <a class="cabecalho_texto" href="lista_lobinho.html">Nossos Lobinhos</a>
+        </div>
+        <img class="cabecalho_icone" src="assets/images/Group 3.svg" alt="">
+        <div>
+            <a class="cabecalho_texto" id="teste" href="lista_lobinho.html">Quem Somos</a>
+        </div>
+    </div>
+</header>
+  <h1>Dados dos Lobos</h1>
   
   <div id="nao-adotados-container">
     <h2>Lobos Não Adotados</h2>
