Mudanças no javascript e adicionando o listar_lobinho.css

--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/listar_lobinho.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
     <div class="lobos_container"></div>
     <div class="paginas_nav">
       <button class="btn_voltar"></button>
-  
+      <div class="pagina_numeros"></div>
       <button class="btn_avançar"></button>
     </div>
 </main>
