Terminando sistema de navegação entre páginas

--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -33,7 +33,7 @@
     <div class="lobos_container"></div>
     <div class="paginas_nav">
       <button class="btn_voltar"></button>
-      <div class="pagina_numeros"></div>
+      <div class="pagina_numeros_container"></div>
       <button class="btn_avançar"></button>
     </div>
 </main>
