feat(adotar_lobinho):add parte visual do form de adoção

--- a/adotar_lobinho.html
+++ b/adotar_lobinho.html
@@ -23,10 +23,32 @@
         <div class="topo_adotar_lobo">
             <img src="assets/images/lobo.png" class="img_adotar_lobo">
             <div class="container_titulo">
-                <span class="text_adotar_lobo">Adote o(a) NomeDoLobo</span>
+                <span class="nome_lobo">Adote o(a) NomeDoLobo</span>
                 <span class="id_lobo">ID:314159</span>
-            </div>
-            
+            </div> 
+        </div>
+        <div class="form_completo">
+            <form>
+                <div class="nome_e_idade">
+                    <div class="container_nome">
+                        <label>Seu nome:</label>
+                        <input type="text" class="form_nome">
+                    </div>
+                    <div class="container_idade">
+                        <label>Idade:</label>
+                        <input type="text" class="form_idade">
+                    </div>
+                </div>
+                <div class="container_email">
+                    <label>E-mail:</label>
+                    <input type="text" class="form_email">
+                </div>
+            </form>
+        </div>
+        <div class="container_btn_adotar">
+            <button class="btn_adotar">
+                Adotar
+            </button>
         </div>
     </section>
     <footer class="main_footer">
