--- a/homepage.html
+++ b/homepage.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/teste.css">
-    <link rel="stylesheet" href="assets/css/teste2.css">
-    <link rel="stylesheet" href="assets/css/teste3.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
 </head>
