feat: finalizando a home

--- a/homepage.html
+++ b/homepage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <title>Document</title>
 </head>
 <body>
@@ -25,15 +25,14 @@
                 Adote um Lobinho
             </h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dignissimos, distinctio voluptatem vitae ad nobis. Excepturi iusto dolor sed nemo ducimus autem recusandae, sunt fuga esse reiciendis eligendi provident quas.
+                É claro que o consenso sobre a necessidade de qualificação apresenta tendências no sentido de aprovar a manutenção das regras de conduta normativas.
             </p>
         </div>
     </section>
     <section class="banner_2">
         <div class="wrapper_2">
             <h2>Sobre</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dignissimos nihil quia nisi quasi veritatis tempora qui velit sed eum, culpa corrupti deleniti a aliquid et vero blanditiis maiores non.
-            Beatae dolorem quod fuga voluptas suscipit quis, cum, mollitia fugit enim qui vel error consequuntur nulla animi impedit? Aut earum debitis quos molestiae distinctio provident unde deleniti saepe facere repellendus.</p>
+            <p>Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
         </div>
     </section>
     <section class="banner_3">
@@ -71,5 +70,61 @@
             </div>
         </div>
     </section>
+    <section class="banner_4">
+        <div class="wrapper_4">
+            <h1 class="titulo_secao_4">Lobos Exemplo</h1>
+            <div class="exemplo_lobo">
+                <div class="imagem_lobo_normal">
+                    <img src="assets/images/lobo-teste.png" alt="">
+                    <div class="fundo_imagem_lobo"></div>
+                </div>
+                <div class="informacoes_lobo_normal">
+                    <h1 class="nome_lobo_normal">Nome do Lobo</h1>
+                    <p class="idade_lobo_normal">Idade: XX anos</p>
+                    <p class="descricao_lobo_normal">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
+                </div>
+            </div>
+            
+            <div class="exemplo_lobo_invertido">
+                <div class="informacoes_lobo_invertido">
+                    <h1 class="nome_lobo_invertido">Nome do Lobo</h1>
+                    <p class="idade_lobo_invertido">Idade: XX anos</p>
+                    <p class="descricao_lobo_invertido">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
+                </div>
+                <div class="imagem_lobo_invertido">
+                    <img src="assets/images/lobo-teste.png" alt="">
+                    <div class="fundo_imagem_lobo_invertido"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="main_footer">
+        <div class="gradient_line"></div>
+        <div class="footer">
+            <div class="left_sub_footer">
+                <iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
+                <div class="contato">
+                    <div class="footer_descricao">
+                        <img src="assets/images/pin.png" class="icons">
+                        <p class="footer_text">Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
+                    </div>
+                    <div class="footer_descricao">
+                            <img src="assets/images/phone.png" class="icons">
+                            <p class="footer_text">(99) 99999-9999</p>
+                    </div>
+                    <div class="footer_descricao">
+                        <img src="assets/images/msg.png" class="icons">
+                        <p class="footer_text">salve-lobos@lobINhos.com</p>
+                    </div>
+                    <button class="footer_button">Quem Somos</button>
+                </div>
+            </div>
+            <div class="right_sub_footer">
+                <p class="footer_text">Desenvolvido com</p>
+                <img src="assets/images/paw.png" class="footer-image">
+                
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
