feat: add section na show_lobinho

--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/show_lobinho.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
-    
+    <section class="section_principal">
+        <div class="wrapper">
+            <h1>NomeDoLobo</h1>
+            <div class="lobo_escolhido">
+                <div>
+                    <div class="imagem_lobo_escolhido">
+                        <img src="assets/images/lobo-teste.png" alt="">
+                        <div class="fundo_imagem_lobo_escolhido"></div>
+                    </div>
+                    <div class="botoes">
+                        <button class="botao adotar">ADOTAR</button>
+                        <button class="botao excluir">EXCLUIR</button>
+                    </div>
+                </div>
+                <div class="informacoes_lobo_escolhido">
+                    <p class="descricao_lobo_escolhido">Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.<br><br>Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="assets/js/script.js"></script>
 </html>
