--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -8,6 +8,17 @@
     <title>Projeto Lobo</title>
 </head>
 <body>
+    <header>
+        <div class="cabecalho">
+            <div>
+                <a class="cabecalho_texto" href="lista_lobinho.html">Nossos Lobinhos</a>
+            </div>
+            <img class="cabecalho_icone" src="assets/images/Group 3.svg" alt="">
+            <div>
+                <a class="cabecalho_texto" id="teste" href="lista_lobinho.html">Quem Somos</a>
+            </div>
+        </div>
+    </header>
     <section class="section_principal">
         <div class="wrapper">
             <h1>NomeDoLobo</h1>
@@ -28,6 +39,34 @@
             </div>
         </div>
     </section>
+    <footer class="main_footer">
+        <div class="gradient_line"></div>
+        <div class="footer">
+            <div class="left_sub_footer">
+                <iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
+                <div class="contato">
+                    <div class="footer_descricao">
+                        <img src="assets/images/pin.png" class="icons">
+                        <p class="footer_text">Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
+                    </div>
+                    <div class="footer_descricao">
+                            <img src="assets/images/phone.png" class="icons">
+                            <p class="footer_text">(99) 99999-9999</p>
+                    </div>
+                    <div class="footer_descricao">
+                        <img src="assets/images/msg.png" class="icons">
+                        <p class="footer_text">salve-lobos@lobINhos.com</p>
+                    </div>
+                    <button class="footer_button">Quem Somos</button>
+                </div>
+            </div>
+            <div class="right_sub_footer">
+                <p class="footer_text">Desenvolvido com</p>
+                <img src="assets/images/paw.png" class="footer-image">
+                
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="assets/js/script.js"></script>
 </html>
