--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -13,9 +13,9 @@
             <div>
                 <a class="cabecalho_texto" href="lista_lobinho.html">Nossos Lobinhos</a>
             </div>
-            <img class="cabecalho_icone" src="assets/images/Group 3.svg" alt="">
+            <a href="homepage.html"><img class="cabecalho_icone" src="assets/images/Group 3.svg" alt=""></a>
             <div>
-                <a class="cabecalho_texto" id="teste" href="lista_lobinho.html">Quem Somos</a>
+                <a class="cabecalho_texto" id="teste" href="quem_somos.html">Quem Somos</a>
             </div>
         </div>
     </header>
