refactor: adicionei icone no navegador

--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/images/Group 3.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/show_lobinho.css">
-    <title>Projeto Lobo</title>
+    <title>Projeto Lobo - Show Lobinho</title>
 </head>
 <body>
     <header>
