--- a/homepage.html
+++ b/homepage.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/images/Group 3.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/home.css">
-    <title>Document</title>
+    <title>Projeto Lobo - Homepage</title>
 </head>
 <body>
     <header>
