Linkando o javascript com o show_lobinho

--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -22,7 +22,7 @@
     </header>
     <section class="section_principal">
         <div class="wrapper">
-            <h1>NomeDoLobo</h1>
+            <h1 class="lobo_nome">NomeDoLobo</h1>
             <div class="lobo_escolhido">
                 <div>
                     <div class="imagem_lobo_escolhido">
