fix: footer não sobrepõe mais o conteúdo

--- a/quem_somos.html
+++ b/quem_somos.html
@@ -19,10 +19,10 @@
             </div>
         </div>
     </header>
-    <section class="middle_section">
+    <main class="middle_section">
         <div class="title_quem_somos">Quem somos</div>
         <div class="text_quem_somos"><span class="main_text">Gingerbread cookie gingerbread jujubes cake biscuit tart fruitcake. Jujubes chupa chups wafer cheesecake lemon drops. Pastry caramels cookie marshmallow. Chupa chups jelly beans apple pie powder marzipan oat cake jelly-o chupa chups biscuit. Lollipop biscuit jujubes tootsie roll oat cake chocolate bar.</span></div>
-    </section>
+    </main>
     <footer class="main_footer">
         <div class="gradient_line"></div>
         <div class="footer">
