feat(footer): add link "quem somos" clicável

--- a/adotar_lobinho.html
+++ b/adotar_lobinho.html
@@ -69,7 +69,7 @@
                         <img src="assets/images/msg.png" class="icons">
                         <p class="footer_text">salve-lobos@lobINhos.com</p>
                     </div>
-                    <button class="footer_button">Quem Somos</button>
+                    <a href="quem_somos.html" class="footer_button">Quem Somos</a>
                 </div>
             </div>
             <div class="right_sub_footer">
