--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -20,7 +20,6 @@
     </div>
 </header>
 <main>
-  
     <div class="filtrar_procura">
       <div class="barra_pesquisa">
         <input type="text" class="input_barra_pesquisa">
@@ -37,6 +36,33 @@
       <div class="pagina_numeros_container"></div>
       <button class="btn_avançar"></button>
     </div>
+    <footer class="main_footer">
+      <div class="gradient_line"></div>
+      <div class="footer">
+          <div class="left_sub_footer">
+              <iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
+              <div class="contato">
+                  <div class="footer_descricao">
+                      <img src="assets/images/pin.png" class="icons">
+                      <p class="footer_text">Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
+                  </div>
+                  <div class="footer_descricao">
+                          <img src="assets/images/phone.png" class="icons">
+                          <p class="footer_text">(99) 99999-9999</p>
+                  </div>
+                  <div class="footer_descricao">
+                      <img src="assets/images/msg.png" class="icons">
+                      <p class="footer_text">salve-lobos@lobINhos.com</p>
+                  </div>
+                  <a href="quem_somos.html" class="footer_button">Quem Somos</a>
+              </div>
+          </div>
+          <div class="right_sub_footer">
+              <p class="footer_text">Desenvolvido com</p>
+              <img src="assets/images/paw.png" class="footer-image">
+          </div>
+      </div>
+  </footer>
 </main>
 </body>
 <script src="assets/js/script.js"></script>
