feat: alteração no show lobinho aparece o lobo escolhido

--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -26,7 +26,7 @@
             <div class="lobo_escolhido">
                 <div>
                     <div class="imagem_lobo_escolhido">
-                        <img src="assets/images/lobo-teste.png" alt="">
+                        <img class="imagem_teste" src="assets/images/lobo-teste.png" alt="">
                         <div class="fundo_imagem_lobo_escolhido"></div>
                     </div>
                     <div class="botoes">
