feat: Pagina Show_lobinho linkada com a adoção

--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -30,7 +30,7 @@
                         <div class="fundo_imagem_lobo_escolhido"></div>
                     </div>
                     <div class="botoes">
-                        <button class="botao adotar">ADOTAR</button>
+                        <a href="adotar_lobinho.html"><button class="botao adotar">ADOTAR</button></a>
                         <button class="botao excluir">EXCLUIR</button>
                     </div>
                 </div>
