refactor(adotar_lobinho): ajustes no layout

--- a/adotar_lobinho.html
+++ b/adotar_lobinho.html
@@ -29,27 +29,27 @@
             </div> 
         </div>
         <div class="form_completo">
-            <form>
+            <form id="form_adocao">
                 <div class="nome_e_idade">
                     <div class="container_nome">
                         <label>Seu nome:</label>
-                        <input type="text" class="form_nome">
+                        <input type="text" id="form_nome">
                     </div>
                     <div class="container_idade">
                         <label>Idade:</label>
-                        <input type="text" class="form_idade">
+                        <input type="text" id="form_idade">
                     </div>
                 </div>
                 <div class="container_email">
                     <label>E-mail:</label>
-                    <input type="text" class="form_email">
+                    <input type="text" id="form_email">
+                </div>
+                <div class="container_btn_adotar">
+                    <button class="btn_adotar_lobinho" form="form_adocao">
+                        Adotar
+                    </button>
                 </div>
             </form>
-        </div>
-        <div class="container_btn_adotar">
-            <button class="btn_adotar_lobinho">
-                Adotar
-            </button>
         </div>
     </section>
     <footer class="main_footer">
@@ -79,5 +79,6 @@
             </div>
         </div>
     </footer>
+    <script src="teste.js"></script>
 </body>
 </html>
