feat(adotar_lobinho): add nome + imagem + id dinâmica na página

--- a/adotar_lobinho.html
+++ b/adotar_lobinho.html
@@ -24,9 +24,9 @@
         <div class="topo_adotar_lobo">
             <img src="assets/images/lobo.png" class="img_adotar_lobo">
             <div class="container_titulo">
-                <span class="nome_lobo">Adote o(a) NomeDoLobo</span>
-                <span class="id_lobo">ID:314159</span>
-            </div> 
+                <span class="nome_lobo"></span>
+                <span class="id_lobo"></span>
+            </div>
         </div>
         <div class="form_completo">
             <form id="form_adocao">
@@ -79,6 +79,6 @@
             </div>
         </div>
     </footer>
-    <script src="teste.js"></script>
+    <script src="assets/js/adotar.js"></script>
 </body>
 </html>
