feat(adotar_lobinho): recebe o nome e o id do lobo pro títutlo

--- a/adotar_lobinho.html
+++ b/adotar_lobinho.html
@@ -29,7 +29,6 @@
             </div>
         </div>
         <div class="form_completo">
-            <form id="form_adocao">
                 <div class="nome_e_idade">
                     <div class="container_nome">
                         <label>Seu nome:</label>
@@ -45,11 +44,10 @@
                     <input type="text" id="form_email">
                 </div>
                 <div class="container_btn_adotar">
-                    <button class="btn_adotar_lobinho" form="form_adocao">
+                    <button class="btn_adotar_lobinho" onclick="enviarDados()">
                         Adotar
                     </button>
                 </div>
-            </form>
         </div>
     </section>
     <footer class="main_footer">
