--- a/adicionar_lobinho.html
+++ b/adicionar_lobinho.html
@@ -5,9 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/Group 3.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/adicionar_lobinho.css">
     <title>Projeto Lobo</title>
 </head>
 <body>
+    <header>
+        <div class="cabecalho">
+            <div>
+                <a class="cabecalho_texto" href="lista_lobinho.html">Nossos Lobinhos</a>
+            </div>
+            <a href="homepage.html"><img class="cabecalho_icone" src="assets/images/Group 3.svg" alt=""></a>
+            <div>
+                <a class="cabecalho_texto" id="teste" href="quem_somos.html">Quem Somos</a>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="adicionar_lobinho_section">
+            <div class="caixa_adicionar_lobinho">
+                <h1>Coloque um lobinho para Adoção</h1>
+                <form class="form_adicionar_lobinho">
+                    <div class="adicionar_lobinho_nome_idade">
+                        <div class="organizacao_label">
+                            <label for="adicionar_lobinho_nome" class="organizacao_label_escrita">Nome do Lobinho:</label>
+                            <input type="text" class="adicionar_lobinho_nome">
+                        </div>
+                        <div class="organizacao_label">
+                            <label for="adicionar_lobinho_idade" class="organizacao_label_escrita">Anos:</label>
+                            <input type="text" class="adicionar_lobinho_idade">
+                        </div>
+                    </div>
+                    <div class="organizacao_label">
+                        <label for="adicionar_lobinho_imagem" class="organizacao_label_escrita">Link da Foto:</label>
+                        <input type="text" class="adicionar_lobinho_imagem">
+                    </div>
+                    <div class="organizacao_label">
+                        <label for="adicionar_lobinho_descricao" class="organizacao_label_escrita">Descrição:</label>
+                        <textarea class="adicionar_lobinho_descricao"></textarea>
+                    </div>
+                </form>
+                <p class="salvar">Salvar</p>
+            </div>
+        </section>
+    </main>
+
+    <footer class="main_footer">
+        <div class="gradient_line"></div>
+        <div class="footer">
+            <div class="left_sub_footer">
+                <iframe width="250" height="168" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ic%20uff+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps tracker sport</a></iframe>
+                <div class="contato">
+                    <div class="footer_descricao">
+                        <img src="assets/images/pin.png" class="icons">
+                        <p class="footer_text">Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
+                    </div>
+                    <div class="footer_descricao">
+                            <img src="assets/images/phone.png" class="icons">
+                            <p class="footer_text">(99) 99999-9999</p>
+                    </div>
+                    <div class="footer_descricao">
+                        <img src="assets/images/msg.png" class="icons">
+                        <p class="footer_text">salve-lobos@lobINhos.com</p>
+                    </div>
+                    <a href="quem_somos.html" class="footer_button">Quem Somos</a>
+                </div>
+            </div>
+            <div class="right_sub_footer">
+                <p class="footer_text">Desenvolvido com</p>
+                <img src="assets/images/paw.png" class="footer-image">
+                
+            </div>
+        </div>
+    </footer>
     
 </body>
 <script src="assets/js/script.js"></script>
