Finalizando completamente adicionar_lobinhos

--- a/adicionar_lobinho.html
+++ b/adicionar_lobinho.html
@@ -80,5 +80,5 @@
     </footer>
     
 </body>
-<script src="assets/js/script.js"></script>
+<script src="assets/js/adicionar_lobinho.js"></script>
 </html>
