--- a/lista_lobinho.html
+++ b/lista_lobinho.html
@@ -24,7 +24,7 @@
     <div class="filtrar_procura">
       <div class="barra_pesquisa">
         <input type="text" class="input_barra_pesquisa">
-        <p class="botao_procurar">+ Lobos</p>
+        <p><a href="adicionar_lobinho.html" class="botao_procurar">+ Lobos</a></p>
       </div>
       <div class="caixa_checkbox">
         <input type="checkbox" class="adotados_checkbox">
