feat: deleta atraves do show_lobinho

--- a/show_lobinho.html
+++ b/show_lobinho.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="botoes">
                         <a href="adotar_lobinho.html"><button class="botao adotar">ADOTAR</button></a>
-                        <button class="botao excluir">EXCLUIR</button>
+                        <button class="botao excluir" onclick="enviarDados()">EXCLUIR</button>
                     </div>
                 </div>
                 <div class="informacoes_lobo_escolhido">
@@ -72,4 +72,5 @@
     </footer>
 </body>
 <script src="assets/js/script.js"></script>
+<script src="assets/js/excluir_lobinho.js"></script>
 </html>
